objects/CO_Sweep_Setup__c.object
<CustomObject>
    <fields>
        <fullName>CF_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Peg_Balance__c</fullName>
        <description>This field is used to store Peg Balance info.</description>
        <label>Peg Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Primary_Child_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store deposit account number info.</description>
        <label>Primary (Child) Account</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Setup</relationshipLabel>
        <relationshipName>Sweep_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Secondary_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Secondary Deposit Account info.</description>
        <label>Secondary (Parent) Account</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Sweep Setup (Secondary (Parent) Account)</relationshipLabel>
        <relationshipName>Sweep_Setup1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Treasury Lookup info.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Sweep Setup</relationshipLabel>
        <relationshipName>Sweep_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sweep Setup</label>
    <nameField>
        <displayFormat>SSID-{000000}</displayFormat>
        <label>Sweep Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sweep Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>